Sets up a basic way to add content to the template without needing to worry about HTML * Makes the router-outlet-content the _true_ scrollable in which overflow content will be scrolled against. * Adds basic JSON template - needs work but works for now * Updated styles to accommodate the scroll issues in the flexbox  setup.

--- a/src/components/home/home.component.scss
+++ b/src/components/home/home.component.scss
@@ -1,27 +1,23 @@
-:host {
-    // ! Fills all available space in app-root main ".section" element!
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-}
-
 .container {
-    display: flex;
-    flex-flow: column;
-    flex: 1 1 auto;
-    height: 100%;
     color: var(--text);
 
     main {
-        justify-content: center;
         align-items: center;
         display: flex;
-        flex: 1 1 auto;
+        flex-direction: column;
         background-color: var(--background);
 
         h1 {
             font-size: 70px; // TODO: create a series of fonts rem font sizes for h1, h2, etc. and apply them here.
-            color: var(--text);
+        }
+
+        h2 {
+            font-size: 40px;
+        }
+
+        p {
+            text-indent: 5ch;
+            max-width: 70ch;
         }
     }
 
